Things are moving along nicely. First page of personal timetabling is done!

--- a/personal/index.html
+++ b/personal/index.html
@@ -7,6 +7,13 @@
 	<body>
 		<div id="center">
 			<h1 id="title">City University Unofficial Personalised Timetable</h1>
+			<form action="username.php" method="get">
+				<h2>	
+					<label>Username:</label>
+					<input name="username" type="text" placeholder="abcd123"/><br/>
+					<input type="submit" value="Generate">
+				</h2>
+			</form>
 		</div>
 	</body>
 </html>
