Added jquery, and simple html php parser. Also improvements to index, and stage 2

--- a/personal/username.html
+++ b/personal/username.html
@@ -2,16 +2,18 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="personalTT.css">
 		<script src="personalTT.js"></script>
+		<script src="jquery-2.0.3.min.js"></script>
+		<script type="text/javascript">
+			
+		</script>
 		<title>City University Unofficial Personalised Timetable!!</title>
 	</head>
 	<body>
 		<div id="center">
 			<h1 id="title">City University Unofficial Personalised Timetable</h1>
-			<form action="username.html" method="get">
+			<form action="username.php" method="get">
 				<h2>	
-					<label>Username:</label>
-					<input name="username" type="text" placeholder="abcd123"/><br/>
-					<input type="submit" value="Generate">
+					
 				</h2>
 			</form>
 		</div>
