Added row selection model js script + clipboard for copy/paste tricks

--- a/ux/spreadsheet.html
+++ b/ux/spreadsheet.html
@@ -12,9 +12,11 @@
 		<script src="lib/SlickGrid/js/slick.editors.js"></script>
 		<script src="lib/SlickGrid/js/slick.formatters.js"></script>
 		<script src="lib/SlickGrid/plugins/slick.cellselectionmodel.js"></script>
+        <script src="lib/SlickGrid/plugins/slick.rowselectionmodel.js"></script>
 	</head>
 	<body onload="initialise_grid()">
 		<h1>THE ENTERER</h1>
 		<div id="entry" class="grid"></div>
+        <textarea id="clipboard"></textarea>
 	</body>
 </html>
