Started using Caviar font across project

--- a/ux/constraints.html
+++ b/ux/constraints.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link href="slider.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.min.css">
+		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
 		<script type="text/javascript" src="lib/jquery/js/jquery-1.10.2.js"></script>
 		<script type="text/javascript" src="sliders.js"></script>
 		<script src="lib/jquery/js/jquery-ui-1.10.4.custom.min.js"></script>
