--- a/ux/person_spreadsheet.html
+++ b/ux/person_spreadsheet.html
@@ -5,13 +5,14 @@
 		<link rel="stylesheet" href="lib/SlickGrid/css/slick.grid.css" type="text/css"/>
 		<script type="text/javascript" src="lib/jquery/js/jquery-1.10.2.js"></script>
 		<script type="text/javascript" src="spreadsheet.js"></script>
-		<script src="lib/jquery/js/jquery-ui-1.10.4.custom.min.js"></script>
+		<script src="lib/jquery/js/jquery-ui-1.10.4.custom.js"></script>
 		<script src="lib/jquery/js/jquery.event.drag-2.2.js"></script>
 		<script src="person.js"></script>
 		<script src="lib/SlickGrid/js/slick.core.js"></script>
 		<script src="lib/SlickGrid/js/slick.grid.js"></script>
 		<script src="lib/SlickGrid/js/slick.editors.js"></script>
 		<script src="lib/SlickGrid/js/slick.formatters.js"></script>
+        <script src="lib/SlickGrid/js/slick.dataview.js"></script>
 		<script src="lib/SlickGrid/plugins/slick.cellselectionmodel.js"></script>
         <script src="lib/SlickGrid/plugins/slick.rowselectionmodel.js"></script>
 	</head>
