--- a/ux/person_activity_spreadsheet.html
+++ b/ux/person_activity_spreadsheet.html
@@ -18,13 +18,10 @@
 		<script type="text/javascript" src="slickgrid.ext.js"></script>
 		<script type="text/javascript" src="html_helpers.js"></script>
 		<script type="text/javascript" src="spreadsheet.js"></script>
-		<script type="text/javascript" src="staff_activity.js"></script>
-        <script type="text/javascript">
-            staff_activity_spreadsheet = new spreadsheet(new staff_activity());
-        </script>
+		<script type="text/javascript" src="person_activity.js"></script>
 	</head>
-	<body onload="staff_activity_spreadsheet.initialise()">
-		<h1>The Staff Enterer</h1>
+	<body onload="person_activity_spreadsheet.initialise()">
+		<h1>The Person-Activity Enterer</h1>
 		<div id="entry" class="grid"></div>
         <textarea id="clipboard"></textarea>
         <div class="save persistence_button">Save</div>
