--- a/ux/module_spreadsheet.html
+++ b/ux/module_spreadsheet.html
@@ -26,5 +26,6 @@
         <textarea id="clipboard"></textarea>
         <div class="save persistence_button">Save</div>
         <div class="discard persistence_button">Discard</div>
+        <iframe class="bottom_menu" src="menu.html" align="center" scrolling="no"></iframe>
 	</body>
 </html>
