--- a/ux/menu.html
+++ b/ux/menu.html
@@ -13,7 +13,9 @@
             <a href="room_spreadsheet.html" title="ROOM" target="_top" >ROOM</a>
             <a href="module_spreadsheet.html" title="MODULE" target="_top" >MODULE</a>
             <a href="person_activity_spreadsheet.html" title="PERSON ACTIVITY" target="_top" >PERSON ACTIVITY</a>
+            <a href="viewer.html" title="VIEWER" target="_top" >VIEWER</a>
             <a href="scheduler.html" title="SCHEDULER" target="_top" >SCHEDULER</a>
+            <a href="clashes.html" title="CLASHES" target="_top" >CLASHES INFO</a>
         </div>
     </body>
 </html>
