--- a/ux/viewer.html
+++ b/ux/viewer.html
@@ -25,30 +25,24 @@
 		<h1>The Viewer</h1>
 		<div id="entry" class="viewer_entry"></div>
         <div class="calendar">
-			<span class="day">
+            <div class="day_names">
                 <span class="day_name">Sunday</span>
-                <span class="booking">
-                    HAHA!<br/>HAHA!<br/>HAHA!<br/>HAHA!<br/>
-                </span>
-            </span>
-			<span class="day">
                 <span class="day_name">Monday</span>
-            </span>
-			<span class="day">
-                <span class="day_name">Tueday</span>
-            </span>
-			<span class="day">
+                <span class="day_name">Tuesday</span>
                 <span class="day_name">Wednesday</span>
-            </span>
-			<span class="day">
                 <span class="day_name">Thursday</span>
-            </span>
-			<span class="day">
                 <span class="day_name">Friday</span>
-            </span>
-			<span class="day">
                 <span class="day_name">Saturday</span>
-            </span>
+            </div>
+            <div class="days">
+    			<span class="day" id="Sunday"></span>
+	    		<span class="day" id="Monday"></span>
+	    		<span class="day" id="Tuesday"></span>
+	    		<span class="day" id="Wednesday"></span>
+	    		<span class="day" id="Thursday"></span>
+	    		<span class="day" id="Friday"></span>
+	    		<span class="day" id="Saturday"></span>
+            </div>
         </div>
         <iframe class="bottom_menu" src="menu.html" align="center" scrolling="no"></iframe>
 	</body>
