Scheduler GUI and Curved Bar chart is working

--- a/ux/activity_spreadsheet.html
+++ b/ux/activity_spreadsheet.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="html_helpers.js"></script>
 		<script type="text/javascript" src="spreadsheet.js"></script>
 		<script type="text/javascript" src="activity.js"></script>
+        <title>The Activity Enterer</title>
 	</head>
 	<body onload="activity_spreadsheet.initialise()">
 		<h1>The Activity Enterer</h1>
