--- a/ux/index.html
+++ b/ux/index.html
@@ -3,9 +3,10 @@
 		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
 		<link href="spreadsheet.css" rel="stylesheet" type="text/css"/>
 		<link href="viewer.css" rel="stylesheet" type="text/css"/>
+        <title>The Scheduler</title>
     </head>
     <body>
-        <h1 style="font-size:10em; margin-top:10%">THE SCHEDULER</h1>
+        <h1 style="font-size:10em; margin-top:10%">The Scheduler</h1>
         <iframe class="bottom_menu" src="menu.html" align="center" scrolling="no"></iframe>
 	</body>
 </html>
