--- a/ux/module_spreadsheet.html
+++ b/ux/module_spreadsheet.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="html_helpers.js"></script>
 		<script type="text/javascript" src="spreadsheet.js"></script>
 		<script src="module.js"></script>
+        <title>The Module Enterer</title>
 	</head>
 	<body onload="module_spreadsheet.initialise()">
 		<h1>The Module Enterer</h1>
