--- a/ux/person_activity_spreadsheet.html
+++ b/ux/person_activity_spreadsheet.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="html_helpers.js"></script>
 		<script type="text/javascript" src="spreadsheet.js"></script>
 		<script type="text/javascript" src="person_activity.js"></script>
+        <title>The Person-Activity Enterer</title>
 	</head>
 	<body onload="person_activity_spreadsheet.initialise()">
 		<h1>The Person-Activity Enterer</h1>
