--- a/ux/room_spreadsheet.html
+++ b/ux/room_spreadsheet.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="html_helpers.js"></script>
 		<script type="text/javascript" src="spreadsheet.js"></script>
 		<script src="room.js"></script>
+        <title>The Room Enterer</title>
 	</head>
 	<body onload="room_spreadsheet.initialise()">
 		<h1>The Room Enterer</h1>
