--- a/ux/penalizer.html
+++ b/ux/penalizer.html
@@ -5,9 +5,10 @@
 		<script type="text/javascript" src="lib/jquery/js/jquery-1.10.2.js"></script>
 		<script type="text/javascript" src="penalizer.js"></script>
 		<script src="lib/jquery/js/jquery-ui-1.10.4.custom.min.js"></script>
+        <title>The Penalizer</title>
 	</head>
 	<body onload="initialise_sliders()">
-		<h1>THE PENALIZER</h1>
+		<h1>The Penalizer</h1>
 		<h2>Staff Lunch Penalty:
 			<span class="penalty_indicator" id="StaffLunchPenalty">0</span>
 		</h2>
