--- a/ux/person_spreadsheet.html
+++ b/ux/person_spreadsheet.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="html_helpers.js"></script>
 		<script type="text/javascript" src="spreadsheet.js"></script>
 		<script type="text/javascript" src="person.js"></script>
+        <title>The Person Enterer</title>
 	</head>
 	<body onload="person_spreadsheet.initialise()">
 		<h1>The Person Enterer</h1>
