--- a/ux/menu.html
+++ b/ux/menu.html
@@ -1,6 +1,6 @@
 <html>
     <head> 
-		<link href="menu.css" rel="stylesheet" type="text/css">
+		<link href="css/menu.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
         <title>Scheduler Menu</title>
     </head>
