--- a/ux/activity_spreadsheet.html
+++ b/ux/activity_spreadsheet.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="spreadsheet.css" rel="stylesheet" type="text/css">
+		<link href="css/spreadsheet.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
 		<link rel="stylesheet" href="lib/SlickGrid/css/slick.grid.css" type="text/css"/>
 
@@ -15,10 +15,10 @@
         <script src="lib/SlickGrid/js/slick.dataview.js"></script>
         <script src="lib/SlickGrid/plugins/slick.rowselectionmodel.js"></script>
 
-		<script type="text/javascript" src="slickgrid.ext.js"></script>
-		<script type="text/javascript" src="html_helpers.js"></script>
-		<script type="text/javascript" src="spreadsheet.js"></script>
-		<script type="text/javascript" src="activity.js"></script>
+		<script type="text/javascript" src="js/slickgrid.ext.js"></script>
+		<script type="text/javascript" src="js/html_helpers.js"></script>
+		<script type="text/javascript" src="js/spreadsheet.js"></script>
+		<script type="text/javascript" src="js/activity.js"></script>
         <title>The Activity Enterer</title>
 	</head>
 	<body onload="activity_spreadsheet.initialise()">
