--- a/ux/index.html
+++ b/ux/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
 		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
-		<link href="spreadsheet.css" rel="stylesheet" type="text/css"/>
-		<link href="viewer.css" rel="stylesheet" type="text/css"/>
+		<link href="css/spreadsheet.css" rel="stylesheet" type="text/css"/>
+		<link href="css/viewer.css" rel="stylesheet" type="text/css"/>
         <title>The Scheduler</title>
     </head>
     <body>
