--- a/ux/penalizer.html
+++ b/ux/penalizer.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<link href="penalizer.css" rel="stylesheet" type="text/css">
+		<link href="css/penalizer.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
 		<script type="text/javascript" src="lib/jquery/js/jquery-1.10.2.js"></script>
-		<script type="text/javascript" src="penalizer.js"></script>
+		<script type="text/javascript" src="js/penalizer.js"></script>
 		<script src="lib/jquery/js/jquery-ui-1.10.4.custom.min.js"></script>
         <title>The Penalizer</title>
 	</head>
