--- a/ux/scheduler.html
+++ b/ux/scheduler.html
@@ -1,10 +1,10 @@
 <html>
     <head>
 		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
-		<link rel="stylesheet" href="scheduler.css">
+		<link rel="stylesheet" href="css/scheduler.css">
 		<script type="text/javascript" src="lib/d3/d3.min.js"></script>
 		<script type="text/javascript" src="lib/jquery/js/jquery-1.10.2.js"></script>
-		<script type="text/javascript" src="scheduler.js"></script>
+		<script type="text/javascript" src="js/scheduler.js"></script>
         <title>The Scheduler</title>
     </head>
     <body onload="init()">
