--- a/ux/viewer.html
+++ b/ux/viewer.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<link href="spreadsheet.css" rel="stylesheet" type="text/css"/>
-		<link href="viewer.css" rel="stylesheet" type="text/css"/>
+		<link href="css/spreadsheet.css" rel="stylesheet" type="text/css"/>
+		<link href="css/viewer.css" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" href="lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css">
 		<link rel="stylesheet" href="lib/SlickGrid/css/slick.grid.css" type="text/css"/>
 
@@ -16,10 +16,10 @@
         <script src="lib/SlickGrid/js/slick.dataview.js"></script>
         <script src="lib/SlickGrid/plugins/slick.rowselectionmodel.js"></script>
 
-		<script type="text/javascript" src="slickgrid.ext.js"></script>
-		<script type="text/javascript" src="html_helpers.js"></script>
-		<script type="text/javascript" src="spreadsheet.js"></script>
-		<script type="text/javascript" src="viewer.js"></script>
+		<script type="text/javascript" src="js/slickgrid.ext.js"></script>
+		<script type="text/javascript" src="js/html_helpers.js"></script>
+		<script type="text/javascript" src="js/spreadsheet.js"></script>
+		<script type="text/javascript" src="js/viewer.js"></script>
 	</head>
 	<body onload="viewer_spreadsheet.initialise()">
 		<h1>The Viewer</h1>
